apps/authelia/httproute-authelia.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  annotations:
    external-dns.kubernetes.io/target: "${SECRET_GATEWAY}"
spec:
  parentRefs:
  - name: internal
    namespace: networking
    sectionName: auth
  - name: external
    namespace: networking
    sectionName: auth
  hostnames:
  - "auth.${SECRET_DOMAIN}"
  rules:
  - backendRefs:
    - name: authelia
      port: 80
